a11y color contrast fix2 for restaurant.html

--- a/css/styles_fix.css
+++ b/css/styles_fix.css
@@ -29,8 +29,12 @@
 #footer {
     color: #bbb;
 }
-.leaflet-container a {
+.leaflet-container a,
+#breadcrumb li a {
     color: rgba(0, 115, 173, 1);
+}
+#restaurant-container h2{
+    color: #444;
 }
 /* **************************** */
 
@@ -48,7 +52,8 @@
     text-align: center;
     border-radius:4px;
 }
-#restaurants-list li h2 {
+#restaurants-list li h2,
+#restaurant-name {
     background-color:midnightblue;
     color: #fff;
     font-family: Arial,sans-serif;
@@ -57,9 +62,10 @@
     letter-spacing: 2px;
     line-height: 1.3;
     padding: 10px;
-    margin-top: 12px;
+    margin: 12px 0px;
     border-radius:2px;
     text-transform: uppercase;
+    text-align: center;
 }
 #restaurants-list li a {
     background-color: initial;
